# home-topology-mapper

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  APPLY.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPRINT_STATUS.md  TASKS.md  docker-compose.yml  pr_body.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/routers/: config.py  devices.py  diagnostics.py  health.py  scans.py  topology.py
backend/app/services/: __init__.py  inventory.py  scanner.py  topology.py
backend/tests/: test_diagnostics.py  test_heuristics.py  test_inventory.py  test_inventory_heuristics.py  test_new_device_bin.py  test_offline_policy.py  test_scanner.py  test_topology_preservation.py
docs/: ANTIGRAVITY_HANDOFF.md  API.md  ARCHITECTURE.md  GIT_WORKFLOW.md  RELEASE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Brand.tsx  LanguageSwitcher.tsx  StatusBadge.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TopologyNode.tsx
frontend/src/i18n/: index.ts
frontend/src/lib/: cn.ts
frontend/src/pages/: Dashboard.tsx  DevicesPage.tsx  TopologyPage.tsx
frontend/src/utils/: time.ts
(+10 files in other folders)
